# giffify

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  plan.md  pygiffy.py  pyproject.toml  versioned_technical_spec.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  release-process.md  security.md
examples/: clips.csv  clips.json  video-to-gif.config.json
marketplaces/claude/.claude-plugin/: marketplace.json
src/skill/video-to-gif/references/: configuration.md  input-formats.md  quality-profiles.md  remote-sources.md  transformations.md  troubleshooting.md
src/skill/video-to-gif/scripts/: video_to_gif.py
src/skill/video-to-gif/scripts/vtg/: __init__.py  cleanup.py  cli.py  dependencies.py  errors.py  ffmpeg.py  models.py
tests/acceptance/: AC-015-manual.md  __init__.py  test_acceptance.py  test_acceptance_remote.py  test_acceptance_transformations.py
tests/fixtures/: __init__.py  base.py  geometry.py  media_server.py
tests/integration/: test_batch.py  test_create.py  test_inspect.py  test_media_variants.py  test_quality_and_geometry.py  test_remote_acquisition.py  test_transformations.py
tests/security/: test_cancellation.py  test_filesystem_safety.py  test_network_isolation.py  test_output_encoding.py  test_remote_security.py  test_transformation_safety.py
tests/unit/: test_cli_integration.py  test_collision.py  test_config.py  test_errors_and_loop.py  test_fuzz.py  test_inspect.py  test_manifests.py  test_naming.py  test_paths.py  test_remote.py  test_remote_cli.py  test_temp_budget.py  test_timestamps.py  test_transforms.py  test_transforms_cli.py  test_validation.py  vtgtest.py
tools/: bench_latency.py  build_packages.py  generate_test_video.py  validate_release.py
